--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -39,6 +39,8 @@
 
                     <div>
                         <div class="title">{{ _formInvitationService.campaignName }}</div>
+                        <div class="date">{{ _formInvitationService.event.dateEvent | date:"fullDate" }}</div>
+                      
                         <div class="subtitle">
                             Completar Formulario
                         </div>
