--- a/src/app/main/pages/errors/500/error-500.component.scss
+++ b/src/app/main/pages/errors/500/error-500.component.scss
@@ -42,6 +42,16 @@ error-500 {
                 text-align: center;
                 font-size: 15px;
             }
+
+            .date {
+                font-size: 20px;
+                margin-bottom: 8px;
+
+                @include media-breakpoint('xs') {
+                    margin-top: 19px;
+                    text-align: center;
+                }
+            }
         }
     }
 }
