--- a/src/app/main/apps/e-commerce/products/products.component.html
+++ b/src/app/main/apps/e-commerce/products/products.component.html
@@ -175,6 +175,7 @@
 
 
             <mat-paginator #paginator
+                            class="paginator-left"
                            [length]="dataSource.filteredData.length"
                            [pageIndex]="0"
                            [pageSize]="10"
