--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.html
@@ -47,8 +47,15 @@
 
             <div fxLayout="row" fxLayoutAlign="start start">
                 <mat-form-field appearance="outline" fxFlex>
-                    <mat-label>Remitente</mat-label>
+                    <mat-label>Email remitente</mat-label>
                     <input formControlName="sender" matInput>
+                </mat-form-field>
+            </div>
+
+            <div fxLayout="row" fxLayoutAlign="start start">
+                <mat-form-field appearance="outline" fxFlex>
+                    <mat-label>Nombre remitente</mat-label>
+                    <input formControlName="nameSender" matInput>
                 </mat-form-field>
             </div>
 
