--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -91,7 +91,7 @@
 
 
                                 <mat-form-field appearance="outline" floatLabel="always" class="w-100-p" fxFlex="100">
-                                    <mat-label>Compañia</mat-label>
+                                    <mat-label>Empresa</mat-label>
                                     <input matInput formControlName="company">
                                     <mat-icon class="mat-icon-company" matSuffix>domain</mat-icon>
                                 </mat-form-field>
@@ -108,6 +108,15 @@
 
                             <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
+                      
+
+                                <mat-form-field appearance="outline" fxFlex="100">
+                                    <mat-label>Dirección</mat-label>
+                                    <input matInput placeholder="Dirección" name="address" formControlName="address"
+                                        >
+                                </mat-form-field>
+
+                
                                 <mat-form-field appearance="outline" floatLabel="always" fxFlex="100" class="w-100-p">
 
                                     <mat-label>Fecha evento</mat-label>
