--- a/src/app/main/pages/errors/500/error-500.component.html
+++ b/src/app/main/pages/errors/500/error-500.component.html
@@ -4,12 +4,18 @@
 
         <!-- <div class="name-campaign"> {{ confirmInvitationService.campaignInvitation.affair }} </div> -->
         <div class="name-campaign">
-            {{  confirmInvitationService.campaignInvitation.affair }}<br>
+            {{  confirmInvitationService.campaignInvitation.affair }}
+        </div>
+        <br>
             <div *ngIf="confirmInvitationService.eventload" class="date">{{ confirmInvitationService.event.dateEvent | date:"fullDate" }}</div>
 
-            Catedral Metropolina.</div>
+
+
+            <div *ngIf="confirmInvitationService.addressLoad" class="message">{{  confirmInvitationService.event.address }}</div>
+            
         <div class="message">{{  confirmInvitationService.campaignInvitation.messageConfirm }}</div>
         <div class="message">Muchas gracias.</div>
+
         <!-- <a class="report-link" href="http://www.turevento.net/">turEvento.net</a>-->
 
     </div>
