duplicated invited ok

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -170,6 +170,11 @@
                         <mat-icon>delete</mat-icon>
                         <span>Eliminar</span>
                     </button>
+
+                    <button mat-menu-item aria-label="remove" (click)="duplicateContact(contact)">
+                        <mat-icon>file_copy</mat-icon>
+                        <span>Duplicar</span>
+                    </button>
                 </mat-menu>
             </div>
 
