--- a/src/app/main/apps/contacts/contacts.component.scss
+++ b/src/app/main/apps/contacts/contacts.component.scss
@@ -30,10 +30,10 @@
         }
     }
 
-    .content {
+    .content-contact-list {
         overflow: hidden;
         margin-bottom: -10px;
-        width: 103%;
+        width: 100%;
 
         .sidebar {
 
