--- a/src/app/main/apps/e-commerce/products/products.component.scss
+++ b/src/app/main/apps/e-commerce/products/products.component.scss
@@ -166,7 +166,19 @@ e-commerce-products {
 }
 
 
+.mat-paginator-container {
+
+    justify-content: right !important;
+
+}
 
 
+.table-product {
+    padding-right: 50px !important;
+}
+
+mat-cell:last-of-type {
+    padding-right: 50px !important;
+}
 
 
