--- a/src/app/main/apps/contacts/contacts.component.html
+++ b/src/app/main/apps/contacts/contacts.component.html
@@ -18,10 +18,10 @@
         SIDEBAR -->
 
         <!-- CENTER -->
-        <div class="center p-24 pb-56 pr-sm-92" fusePerfectScrollbar>
+        <div class="center p-24 pb-56" fusePerfectScrollbar>
 
             <!-- CONTENT -->
-            <div class="content" *ngIf="_contactsService.eventCreated">
+            <div class="content-contact-list" *ngIf="_contactsService.eventCreated">
                 <contacts-contact-list></contacts-contact-list>
 
             </div>
