aprueba de inbeciles

--- a/src/app/layout/speed-dial-fab/speed-dial-fab.component.html
+++ b/src/app/layout/speed-dial-fab/speed-dial-fab.component.html
@@ -1,9 +1,9 @@
 <div class="fab-container" >
         <button mat-fab class="fab-toggler"
-                [disabled]="_contactsService.loadingContact"
+                [disabled]="loadingContact"
                 (click)="onToggleFab()">
-                <mat-icon *ngIf="!_contactsService.loadingContact">add</mat-icon>
-                <mat-spinner class="spinner-fab" *ngIf="_contactsService.loadingContact"  diameter="35"></mat-spinner>
+                <mat-icon *ngIf="!loadingContact">add</mat-icon>
+                <mat-spinner class="spinner-fab" *ngIf="loadingContact"  diameter="35"></mat-spinner>
         </button>
         <div [@speedDialStagger]="buttons.length"> <!-- and here -->
           <input hidden id="fileUpload" type="file" #fileInput/>
