--- a/src/app/main/pages/authentication/lock/lock.component.html
+++ b/src/app/main/pages/authentication/lock/lock.component.html
@@ -100,13 +100,13 @@
 
                     <button mat-raised-button (click)="confirmInvitation()" class="submit-button  mt-24 mt-md-0" color="accent">
                         <mat-icon matSuffix>done</mat-icon>
-                        Confirmar
+                        CONFIRMAR
                     </button>
 
 
-                    <button mat-raised-button (click)="cancelInvitation()" class="cancel-button">
+                    <button mat-button (click)="cancelInvitation()" class="cancel-button">
                         <mat-icon matSuffix>cancel</mat-icon>
-                        Cancelar
+                        CANCELAR
                     </button>
                 </form>
 
