--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,11 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
     width: 600px !important;
 }
 
+.my-class-add .mat-dialog-container {
+    width: 1200px !important;
+    padding: 0px;
+}
+
 
 
 
