--- a/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/dialog/add/add.component.scss
@@ -33,18 +33,20 @@
 
 .slide-bottom {
 
-    margin-bottom:  6%;
+    margin-bottom:  2%;
+
+    @include media-breakpoint('xs') {
+      margin-bottom:  6%;
+    }
 }
 
 .container
 {
   position: relative;
-  margin-top: 0px;
-  margin-bottom: 25px;
-  width: 500px;
-  height: 300px;
-  border-style: dashed;
-  color: #e0e0e0;
+  /* margin-top: 0px; */
+  /* margin-bottom: 26px; */
+  width: 70px;
+  height: 91px;
 }
 
 
@@ -106,13 +108,15 @@ border-radius: 3%;
 .button
 {
   position: absolute;
+  left: -35px;
 
-margin: 46%;
-  left:0;
-  top:  100px;
-  text-align: center;
-  opacity:0;
-  transition: opacity .25s ease;
+    text-align: center;
+    opacity: 1;
+    z-index: 100;
+    top: -20px;
+    @include media-breakpoint('xs') {
+      top: -43px;
+  }
 }
 .button a
 {
@@ -135,4 +139,8 @@ margin: 46%;
 
 .form {
   margin-top: 5%;
+}
+
+.label-form{
+  margin-top: 10px;
 }
